Practice/application_Routing_Ingress_Controller/netflix_service.yaml
  apiVersion: v1
  kind: Service
  metadata: 
    name: applicationgw-service
    namespace: hostbase-ns
  spec: 
    ports: 
    - port: 80
      targetPort: 80
    selector:
      app: routing
    type: LoadBalancer
